[gd_scene load_steps=10 format=2]

[ext_resource path="res://Graphics/bg.png" type="Texture" id=1]
[ext_resource path="res://fonts/development tree.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Graphics/NAWIGACJA.png" type="Texture" id=4]
[ext_resource path="res://Graphics/devTree/background.png" type="Texture" id=5]
[ext_resource path="res://fonts/Aclonica Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Graphics/Intro.webm" type="VideoStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[node name="Main" type="Sprite"]
scale = Vector2( 0.510245, 0.564987 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Game" type="Button" parent="."]
margin_left = -188.145
margin_top = -226.554
margin_right = 167.855
margin_bottom = -140.554
rect_pivot_offset = Vector2( 125.43, -0.000411987 )
custom_fonts/font = ExtResource( 2 )
text = "Zacznij"

[node name="Button2" type="Button" parent="."]
margin_left = -188.145
margin_top = -56.6385
margin_right = 167.855
margin_bottom = 29.361
rect_pivot_offset = Vector2( 125.43, -2.67029e-05 )
custom_fonts/font = ExtResource( 2 )
text = "Przypisy "

[node name="Button3" type="Button" parent="."]
margin_left = -188.145
margin_top = 113.277
margin_right = 167.855
margin_bottom = 199.276
rect_pivot_offset = Vector2( 125.43, -2.67029e-05 )
custom_fonts/font = ExtResource( 2 )
text = "Sterowanie"

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 6.72843 )
rotation = -1.5708
scale = Vector2( 0.749191, 0.953922 )
texture = ExtResource( 5 )

[node name="Nawigacja" type="Sprite" parent="Background"]
position = Vector2( 8.98092, 1.63042e-05 )
rotation = 1.5708
scale = Vector2( 0.505726, 0.566996 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="Background/Nawigacja"]
margin_left = -1430.0
margin_top = -800.0
margin_right = -1040.0
margin_bottom = -667.0
custom_fonts/font = SubResource( 1 )
text = "POWRÓT"

[node name="Przypisy" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 6.72843 )
rotation = -1.5708
scale = Vector2( 0.749191, 0.953922 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="Przypisy"]
margin_left = 451.808
margin_top = -725.8
margin_right = 775.808
margin_bottom = -632.8
rect_rotation = 90.0
custom_fonts/font = SubResource( 1 )
text = "POWRÓT"

[node name="Label" type="Label" parent="Przypisy"]
margin_left = 426.346
margin_top = -753.0
margin_right = 1916.35
margin_bottom = 108.0
rect_rotation = 90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Autorzy:

Tomasz Dudek
Kacper Wojciechowski

Głos:

Nadia Piechota

Wykonanie:

Tomasz Dudek 
Kacper Wojciechowski

Strony:

pinterest.com
textures.com
narakeet.com (głos - Tomek)

Dźwięki:

autorskie
youtube.com
"
align = 1
valign = 1

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = -753.0
margin_top = -396.0
margin_right = 753.0
margin_bottom = 396.0
stream = ExtResource( 7 )

[node name="Timer" type="Timer" parent="VideoPlayer"]

[connection signal="pressed" from="Game" to="." method="_on_Game_pressed"]
[connection signal="pressed" from="Button2" to="." method="changeCredits"]
[connection signal="pressed" from="Button3" to="." method="changeVisible"]
[connection signal="pressed" from="Background/Nawigacja/Button" to="." method="changeVisible"]
[connection signal="pressed" from="Przypisy/Button" to="." method="changeCredits"]
[connection signal="timeout" from="VideoPlayer/Timer" to="." method="closeIntro"]
